--- a/src/scss/_baseCard.scss
+++ b/src/scss/_baseCard.scss
@@ -1,10 +1,4 @@
 .hr-card-header {
-  position: relative;
-  padding-top: 40px;
-}
-.hr-card-header_icon {
-  position: absolute;
-  top: -30px;
-  left: 0;
-  border-radius: 10px;
+  margin-top: -30px;
+  border-radius: 10px !important;
 }
